[REFACTOR] Change hardcoded origins to formatted origins