@@ -1,5 +1,6 @@
 package id.ac.ui.cs.advprog.liga.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -14,27 +15,31 @@ import java.util.List;
 @Configuration
 public class SecurityConfig {
   
+  // NEW: Grab the URL from application.properties
+  @Value("${frontend.url}")
+  private String frontendUrl;
+
   @Bean
   public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
     http
-            // 1. Tell Spring Security to use our CORS configuration below
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .csrf(csrf -> csrf.disable())
             .authorizeHttpRequests(auth -> auth
-                    // 2. Explicitly permit preflight OPTIONS requests so the browser doesn't get blocked
                     .requestMatchers(org.springframework.http.HttpMethod.OPTIONS, "/**").permitAll()
-                    .requestMatchers("/api/clan/list", "/api/clan/detail/**").permitAll() // Anyone can view clans [cite: 17]
-                    .anyRequest().authenticated() // Must be logged in to create/join/leave clans 
+                    .requestMatchers("/api/clan/list", "/api/clan/detail/**").permitAll() 
+                    .anyRequest().authenticated() 
             )
-            .oauth2ResourceServer(oauth2 -> oauth2.jwt(jwt -> {})); // [cite: 18]
+            .oauth2ResourceServer(oauth2 -> oauth2.jwt(jwt -> {})); 
     return http.build();
   }
 
-  // 3. Define the CORS rules for the entire Spring Security chain
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
       CorsConfiguration configuration = new CorsConfiguration();
-      configuration.setAllowedOrigins(List.of("http://localhost:3000")); // Allow your Next.js frontend
+      
+      // NEW: Use the dynamic URL, and support multiple URLs if separated by commas
+      configuration.setAllowedOrigins(Arrays.asList(frontendUrl.split(","))); 
+      
       configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
       configuration.setAllowedHeaders(List.of("*"));
       configuration.setAllowCredentials(true);
